--- a/Demo/wxProject/project.config.json
+++ b/Demo/wxProject/project.config.json
@@ -28,7 +28,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -39,7 +39,20 @@
 				{
 					"id": -1,
 					"name": "展示",
-					"pathName": "pages/list/list"
+					"pathName": "pages/list/list",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "我的",
+					"pathName": "pages/my/my",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "授权",
+					"pathName": "pages/accredit/accredit",
+					"query": ""
 				}
 			]
 		}
