--- a/Demo/wxProject/project.config.json
+++ b/Demo/wxProject/project.config.json
@@ -9,7 +9,7 @@
 		"newFeature": true
 	},
 	"appid": "wx45e0c4873022512e",
-	"projectname": "project2",
+	"projectname": "Runner",
 	"libVersion": "2.2.5",
 	"condition": {
 		"search": {
