--- a/Demo/wxProject/miniprogram/app.json
+++ b/Demo/wxProject/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/list/list",
     "pages/index/index",
     "pages/my/my",
-    "pages/accredit/accredit"
+    "pages/accredit/accredit",
+    "pages/login/login"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
