--- a/Demo/wxProject/project.config.json
+++ b/Demo/wxProject/project.config.json
@@ -28,7 +28,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -57,7 +57,13 @@
 				{
 					"id": -1,
 					"name": "信息列表",
-					"pathName": "pages/index/index"
+					"pathName": "pages/index/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "添加文章",
+					"pathName": "pages/addArticle/addArticle"
 				}
 			]
 		}
