add:新增文章功能

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,5 @@
 {
-  "cloud":true,
+  "cloud": true,
   "pages": [
     "pages/list/list",
     "pages/index/index",
@@ -17,27 +17,28 @@
   },
   "tabBar": {
     "color": "#666666",
-    "selectedColor": "#03A9F4",
+    "selectedColor": "#fe5e23",
     "borderStyle": "black",
     "backgroundColor": "#fcfcfc",
-    "list": [{
-      "pagePath": "pages/list/list",
-      "text": "首页",
-      "iconPath":"/image/Runner.png",
-      "selectedIconPath":"/image/Running.png"
-    },
-    {
-      "pagePath": "pages/index/index",
-      "text": "信息列表",
-      "iconPath":"/image/fei.png",
-      "selectedIconPath":"/image/fei1.png"
-    },
-    {
-      "pagePath": "pages/my/my",
-      "text": "博客中心",
-      "iconPath":"/image/inform.png",
-      "selectedIconPath":"/image/inform1.png"
-    }
+    "list": [
+      {
+        "pagePath": "pages/list/list",
+        "text": "首页",
+        "iconPath": "/image/Runner.png",
+        "selectedIconPath": "/image/Running.png"
+      },
+      {
+        "pagePath": "pages/index/index",
+        "text": "信息列表",
+        "iconPath": "/image/fei.png",
+        "selectedIconPath": "/image/fei1.png"
+      },
+      {
+        "pagePath": "pages/my/my",
+        "text": "博客中心",
+        "iconPath": "/image/inform.png",
+        "selectedIconPath": "/image/inform1.png"
+      }
     ]
   },
   "networkTimeout": {
@@ -45,5 +46,6 @@
     "connectSocket": 10000,
     "uploadFile": 10000,
     "downloadFile": 10000
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
